Correcion del post añadir favoritos
